# bugs

./: .gitignore  LaunchAppTestcases.xlsx  README.md  alg_auto.sh  gazebo_auto.sh
BLAPP/: README.md  buglauncher.sh  gazebolaunch.py  launchalgos.py  main.py  main.pyproject  map.sh  quit.sh  resultparser.py
Map_Generator/: README.md  launch_writer.py  main.py  maze.py
src/bug_alg/: CMakeLists.txt  package.xml
src/bug_alg/launch/: bug1.launch  class1.launch  distbug.launch  visbug21.launch
src/bug_alg/scripts/: bug.cpp  bug.h  bug1.cpp  class1.cpp  class1.h  class1.py  distbug.py  follow_wall.cpp  follow_wall.py  follow_wall_left.cpp  follow_wall_left.py  go_to_point.cpp  go_to_point.py  visbug21.cpp  visbug21.h
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: small.launch  turtlebot3_stage_4.launch
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: small.world
